# ny_times_articles

./: .gitignore  .pre-commit-config.yaml  .prefectignore  Makefile  pyproject.toml
scripts/: create_bigquery_block.py  create_gcp_credentials_block.py  create_gcs_bucket.py  create_secret_block.py  explore_bigquery.sql
src/: config.py  utils.py
src/etl/: extract.py  load.py
src/flows/: healthcheck.py  ingest_interim_article_data.py  ingest_raw_article_data.py  ingest_raw_article_metadata_to_gcs.py  sync_article_data_to_bigquery.py
tests/: test_utils.py
workflows/: run_test.yaml
